--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,77 @@
-click==8.0.3
-colorama==0.4.4
-Flask==2.0.2
+altgraph==0.17.2
+aniso8601==9.0.1
+async-generator==1.10
+attrs==21.4.0
+beautifulsoup4==4.11.1
+blinker==1.5
+Brotli==1.0.9
+bs4==0.0.1
+cachetools==5.2.0
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+cryptography==37.0.4
+fake-headers==1.0.2
+fake-useragent==0.1.11
+Flask==2.2.1
+Flask-RESTful==0.3.9
+future==0.18.2
+google-api-core==2.8.2
+google-api-python-client==2.53.0
+google-auth==2.9.1
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.5.2
+googleapis-common-protos==1.56.4
 gunicorn==20.1.0
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-Werkzeug==2.0.2
+h11==0.13.0
+h2==4.1.0
+hpack==4.0.0
+html5lib==1.1
+httplib2==0.20.4
+hyperframe==6.0.1
+idna==3.3
+importlib-metadata==4.11.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kaitaistruct==0.10
+MarkupSafe==2.1.1
+numpy==1.19.4
+oauthlib==3.2.0
+outcome==1.2.0
+pefile==2021.9.3
+protobuf==4.21.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydivert==2.1.0
+pygsheets==2.0.5
+pyinstaller==4.10
+pyinstaller-hooks-contrib==2022.2
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dotenv==0.20.0
+pytz==2022.1
+pywin32-ctypes==0.2.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.8
+selenium==4.3.0
+selenium-wire==4.6.5
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+trio==0.21.0
+trio-websocket==0.9.2
+typing_extensions==4.1.1
+uritemplate==4.1.1
+urllib3==1.26.10
+webdriver-manager==3.8.2
+webencodings==0.5.1
+Werkzeug==2.2.1
+wsproto==1.1.0
+zipp==3.7.0
+zstandard==0.18.0
