--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 altgraph==0.17.2
 aniso8601==9.0.1
 async-generator==1.10
+async-timeout==4.0.2
+asyncio==3.4.3
+asynctest==0.13.0
 attrs==21.4.0
 beautifulsoup4==4.11.1
 blinker==1.5
@@ -13,8 +18,12 @@ charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
 cryptography==37.0.4
+fake-headers==1.0.2
+fake-useragent==0.1.11
 Flask==2.2.1
+Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
+frozenlist==1.3.1
 future==0.18.2
 google-api-core==2.8.2
 google-api-python-client==2.53.0
@@ -35,6 +44,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 kaitaistruct==0.10
 MarkupSafe==2.1.1
+multidict==6.0.2
 oauthlib==3.2.0
 outcome==1.2.0
 pefile==2021.9.3
@@ -70,5 +80,6 @@ webdriver-manager==3.8.2
 webencodings==0.5.1
 Werkzeug==2.2.1
 wsproto==1.1.0
+yarl==1.8.1
 zipp==3.7.0
 zstandard==0.18.0
